--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
           <!-- 2) BookPlaylist -->
           <li class="nav-item dropdown hover-dd">
-           <a class="nav-link dropdown-toggle" href="bookplaylist.html" role="button" data-bs-toggle="dropdown">
-            BookPlaylist
+            <a class="nav-link dropdown-toggle" href="bookplaylist.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              BookPlaylist
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="forest.html">숲</a></li>
@@ -74,7 +74,7 @@
     </div>
   </nav>
 
-  <!-- ===== MAIN HERO (네 스케치 느낌 유지) ===== -->
+  <!-- ===== MAIN ===== -->
   <header class="hero-section">
     <div class="container">
       <div class="row align-items-center gy-4">
@@ -97,12 +97,10 @@
                   </p>
                 </div>
               </div>
-              <div class="laurel left"></div>
-              <div class="laurel right"></div>
             </div>
           </a>
 
-          <p class="scroll-hint mt-4 mb-0">아래로 스크롤 시, 사이트 소개글</p>
+          <p class="scroll-hint mt-4 mb-0">-</p>
         </div>
 
         <div class="col-lg-3">
