--- a/fantasy.html
+++ b/fantasy.html
@@ -52,7 +52,7 @@
       margin: 0;
     }
 
-    /* 4) Tracklist: 링크 + hover 팝업(뉴스 카드처럼) */
+    /* 트랙리스트 */
     .track-item{
       position: relative;
       width: fit-content;
@@ -184,38 +184,38 @@
 
   </div>
   </nav>
-   <!-- ===== 배경 + 콘텐츠 ===== -->
+   <!--배경 -->
   <main class="theme-bg">
     <div class="container">
 
-      <!-- 페이지 제목(흰 박스) -->
+      <!-- 페이지 제목 -->
       <div class="page-tag">
-        <h1>바다 테마 플레이리스트</h1>
+        <h1>판타지 테마 플레이리스트</h1>
       </div>
 
       <div class="row g-4">
-        <!-- Tracklist 블럭 -->
+        <!-- Tracklist -->
         <div class="col-lg-6">
           <section class="glass-block">
             <h2 class="block-title">Tracklist</h2>
 
-            <!-- 트랙 1 -->
+           <!-- 트랙 한 단위 -->
             <div class="track-item">
-              <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
-                노래1 - 가수
+              <a class="track-link" href="https://www.youtube.com/watch?v=Kus75rHg930&list=RDKus75rHg930&start_radio=1" target="_blank" rel="noreferrer">
+                A Long Legend Story - Titanrium / TTRM
               </a>
 
-              <!-- hover 팝업(뉴스 카드처럼) -->
+              <!-- 링크 팝업(뉴스) -->
               <div class="track-popup">
                 <div class="popup-title">곡소개 / 장르</div>
                 <div class="popup-desc">
-                  잔잔한 앰비언트(예시). 파도 소리처럼 배경으로 흐르며 몰입을 방해하지 않음.
+                  햇빛이 스며드는 나무 집, 할머니가 들려주는 전설 속 이야기와 같은 음악. 
                 </div>
-                <div class="popup-url">https://www.youtube.com/</div>
+                <div class="popup-url">https://www.youtube.com/watch?v=Kus75rHg930&list=RDKus75rHg930&start_radio=1</div>
               </div>
             </div>
 
-            <!-- 트랙 2 -->
+            <!-- 트랙 한 단위 -->
             <div class="track-item">
               <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
                 노래2 - 가수
@@ -229,7 +229,7 @@
               </div>
             </div>
 
-            <!-- 트랙 3 -->
+            <!-- 트랙 한 단위 -->
             <div class="track-item">
               <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
                 노래3 - 가수
@@ -253,10 +253,10 @@
         <!-- 설명 블럭 -->
         <div class="col-lg-5 offset-lg-1">
           <section class="glass-block">
-            <h2 class="block-title">바다에서의 독서</h2>
+            <h2 class="block-title">판타지 세계에서의 독서</h2>
             <p class="block-text">
-              독서와 파도소리가 서로의 빈틈을 천천히 채워주는 시간.
-              잔잔한 리듬의 음악과 함께 조용히 흘러가게 두세요.
+              과몰입하기 딱 좋은 새로운 세상에서의 독서.
+              마법, 정령, SF, 괴생명체...무한한 상상 세계로의 여행을 도와 줄 플레이리스트.
             </p>
           </section>
         </div>
