--- a/forest.html
+++ b/forest.html
@@ -184,38 +184,38 @@
 
   </div>
   </nav>
-   <!-- ===== 배경 + 콘텐츠 ===== -->
+   <!--배경 -->
   <main class="theme-bg">
     <div class="container">
 
-      <!-- 페이지 제목(흰 박스) -->
+      <!-- 페이지 제목 -->
       <div class="page-tag">
-        <h1>바다 테마 플레이리스트</h1>
+        <h1>숲 테마 플레이리스트</h1>
       </div>
 
       <div class="row g-4">
-        <!-- Tracklist 블럭 -->
+        <!-- Tracklist -->
         <div class="col-lg-6">
           <section class="glass-block">
             <h2 class="block-title">Tracklist</h2>
 
-            <!-- 트랙 1 -->
+           <!-- 트랙 한 단위 -->
             <div class="track-item">
-              <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
-                노래1 - 가수
+              <a class="track-link" href="https://www.youtube.com/watch?v=8FShyABhIAs" target="_blank" rel="noreferrer">
+                Ellin Forest - MapleStory
               </a>
 
-              <!-- hover 팝업(뉴스 카드처럼) -->
+              <!-- 링크 팝업(뉴스) -->
               <div class="track-popup">
                 <div class="popup-title">곡소개 / 장르</div>
                 <div class="popup-desc">
-                  잔잔한 앰비언트(예시). 파도 소리처럼 배경으로 흐르며 몰입을 방해하지 않음.
+                  잔잔하고 신비로운, 축축하게 젖은 깊은 숲 속 분위기. 
                 </div>
-                <div class="popup-url">https://www.youtube.com/</div>
+                <div class="popup-url">https://www.youtube.com/watch?v=8FShyABhIAs</div>
               </div>
             </div>
 
-            <!-- 트랙 2 -->
+            <!-- 트랙 한 단위 -->
             <div class="track-item">
               <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
                 노래2 - 가수
@@ -223,13 +223,13 @@
               <div class="track-popup">
                 <div class="popup-title">곡소개 / 장르</div>
                 <div class="popup-desc">
-                  로파이/피아노(예시). 페이지 넘김 템포와 잘 맞는 느린 리듬.
+                  로파이/피아노. 페이지 넘김 템포와 잘 맞는 느린 리듬.
                 </div>
                 <div class="popup-url">https://www.youtube.com/</div>
               </div>
             </div>
 
-            <!-- 트랙 3 -->
+            <!-- 트랙 한 단위 -->
             <div class="track-item">
               <a class="track-link" href="https://www.youtube.com/" target="_blank" rel="noreferrer">
                 노래3 - 가수
